force-app/main/default/objects/Zumzum__Expense_Sheet__c/Zumzum__Expense_Sheet__c.object-meta.xml
<CustomObject>
    <label>Expense Sheet</label>
    <nameField>
        <label>Claim No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Sheet</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>