force-app/main/default/objects/Zumzum__Expense_Sheet__c/fields/Number_of_Purchase_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Purchase_Invoices__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of purchase invoices associated to this Expense Sheet record. Populated by Declarative Rollup Summary managed package.</description>
    <label>Number of Purchase Invoices</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>