force-app/main/default/objects/Zumzum__Expense_Sheet__c/listViews/All_Pending_Expenses.listView-meta.xml
<ListView>
    <fullName>All_Pending_Expenses</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Zumzum__Total_Gross__c</columns>
    <columns>Zumzum__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Zumzum__Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>All Pending Expenses</label>
</ListView>