force-app/main/default/objects/Zumzum__Expense_Sheet__c/listViews/Pending_Finance_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_Finance_Approval</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Zumzum__Total_Gross__c</columns>
    <columns>Zumzum__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Number_of_Purchase_Invoices__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Pending Finance Approval</label>
    <sharedTo>
        <role>Finance</role>
    </sharedTo>
</ListView>