force-app/main/default/objects/Zumzum__Expense_Sheet__c/listViews/Zumzum__All.listView-meta.xml
<ListView>
    <fullName>Zumzum__All</fullName>
    <columns>NAME</columns>
    <columns>Zumzum__Month_Number__c</columns>
    <columns>Zumzum__Status__c</columns>
    <columns>Zumzum__Total_Gross__c</columns>
    <columns>Zumzum__Total_Miles__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>